--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -21,10 +21,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
-                    <button class="btn nav-link" type="button" hx-get="/">Home</button>
-                    <button class="btn nav-link" type="button" hx-get="/import">Import File</button>
-                    <button class="btn nav-link" type="button" hx-get="/jobs">Jobs</button>
-                    <button class="btn nav-link" type="button" hx-get="/requests">Requests</button>
+                    <button class="btn nav-link" type="button" hx-get="/dashboard/">Home</button>
+                    <button class="btn nav-link" type="button" hx-get="/dashboard/import">Import File</button>
+                    <button class="btn nav-link" type="button" hx-get="/dashboard/jobs">Jobs</button>
+                    <button class="btn nav-link" type="button" hx-get="/dashboard/requests">Requests</button>
                     <button class="btn nav-link text-danger" type="button" hx-post="/logout"
                         hx-target="body">Quit</button>
                 </div>
