--- a/views/templates/layout.templ
+++ b/views/templates/layout.templ
@@ -16,8 +16,8 @@ templ LayoutWithNav(title string, content templ.Component, currentPage string) {
 			<!-- Bootstrap 5 CDN -->
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 			<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
-			<!-- Vue.js 3 CDN -->
-			<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+			<!-- Alpine.js CDN -->
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 			<style>
 				.request-card {
